--- a/Echo/Resources/LangResx.de-DE.resx
+++ b/Echo/Resources/LangResx.de-DE.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>Satzanalyse-API</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>Alle</value>
+  </data>
 </root>
