--- a/Echo/Resources/LangResx.es.resx
+++ b/Echo/Resources/LangResx.es.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>es: API de Análisis de Oraciones</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>Todos</value>
+  </data>
 </root>
