--- a/Echo/Resources/LangResx.ko-KR.resx
+++ b/Echo/Resources/LangResx.ko-KR.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>문장 분석 API</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>모두</value>
+  </data>
 </root>
