--- a/Echo/Resources/LangResx.pt.resx
+++ b/Echo/Resources/LangResx.pt.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>API de Análise de Sentenças</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>Todos</value>
+  </data>
 </root>
