--- a/Echo/Resources/LangResx.ru.resx
+++ b/Echo/Resources/LangResx.ru.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>API для анализа предложений</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>Все</value>
+  </data>
 </root>
