--- a/Echo/Resources/LangResx.uk-UA.resx
+++ b/Echo/Resources/LangResx.uk-UA.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>API для аналізу речень</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>все</value>
+  </data>
 </root>
