--- a/Echo/Resources/LangResx.zh-Hans.resx
+++ b/Echo/Resources/LangResx.zh-Hans.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>整句分析 API</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>所有</value>
+  </data>
 </root>
