--- a/Echo/Resources/LangResx.zh-Hant.resx
+++ b/Echo/Resources/LangResx.zh-Hant.resx
@@ -300,4 +300,7 @@
   <data name="Sentence_Analysis_API" xml:space="preserve">
     <value>句子分析 API</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>全部</value>
+  </data>
 </root>
