--- a/Echo/Resources/LangResx.it-IT.resx
+++ b/Echo/Resources/LangResx.it-IT.resx
@@ -303,4 +303,7 @@
   <data name="All" xml:space="preserve">
     <value>Tutti</value>
   </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>Secondi</value>
+  </data>
 </root>
