--- a/Echo/Resources/LangResx.ja-JP.resx
+++ b/Echo/Resources/LangResx.ja-JP.resx
@@ -303,4 +303,7 @@
   <data name="All" xml:space="preserve">
     <value>すべて</value>
   </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>秒 (びょう)</value>
+  </data>
 </root>
