--- a/Echo/Resources/LangResx.zh-Hant.resx
+++ b/Echo/Resources/LangResx.zh-Hant.resx
@@ -303,4 +303,7 @@
   <data name="All" xml:space="preserve">
     <value>全部</value>
   </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>秒</value>
+  </data>
 </root>
