--- a/Echo/Resources/LangResx.resx
+++ b/Echo/Resources/LangResx.resx
@@ -306,4 +306,10 @@
   <data name="Seconds" xml:space="preserve">
     <value>Seconds</value>
   </data>
+  <data name="No_Subtitles" xml:space="preserve">
+    <value>No Subtitles</value>
+  </data>
+  <data name="Embedded_Subtitles" xml:space="preserve">
+    <value>Embedded Subtitles</value>
+  </data>
 </root>
