--- a/Echo/Resources/LangResx.zh-Hans.resx
+++ b/Echo/Resources/LangResx.zh-Hans.resx
@@ -306,4 +306,10 @@
   <data name="Seconds" xml:space="preserve">
     <value>秒</value>
   </data>
+  <data name="No_Subtitles" xml:space="preserve">
+    <value>没有字幕</value>
+  </data>
+  <data name="Embedded_Subtitles" xml:space="preserve">
+    <value>嵌入式字幕</value>
+  </data>
 </root>
