--- a/Echo/Resources/LangResx.de-DE.resx
+++ b/Echo/Resources/LangResx.de-DE.resx
@@ -312,4 +312,13 @@
   <data name="Embedded_Subtitles" xml:space="preserve">
     <value>Eingebettete Untertitel</value>
   </data>
+  <data name="Always_Show" xml:space="preserve">
+    <value>Immer anzeigen</value>
+  </data>
+  <data name="Show_on_Mouse_Hover" xml:space="preserve">
+    <value>Zeigen bei Mouseover</value>
+  </data>
+  <data name="Hide" xml:space="preserve">
+    <value>Verstecken</value>
+  </data>
 </root>
