--- a/Echo/Resources/LangResx.fr.resx
+++ b/Echo/Resources/LangResx.fr.resx
@@ -312,4 +312,13 @@
   <data name="Embedded_Subtitles" xml:space="preserve">
     <value>Sous-titres intégrés</value>
   </data>
+  <data name="Always_Show" xml:space="preserve">
+    <value>Toujours afficher</value>
+  </data>
+  <data name="Show_on_Mouse_Hover" xml:space="preserve">
+    <value>Afficher au survol de la souris</value>
+  </data>
+  <data name="Hide" xml:space="preserve">
+    <value>Cacher</value>
+  </data>
 </root>
