--- a/Echo/Resources/LangResx.it-IT.resx
+++ b/Echo/Resources/LangResx.it-IT.resx
@@ -312,4 +312,13 @@
   <data name="Embedded_Subtitles" xml:space="preserve">
     <value>Sottotitoli incorporati</value>
   </data>
+  <data name="Always_Show" xml:space="preserve">
+    <value>Mostra sempre</value>
+  </data>
+  <data name="Show_on_Mouse_Hover" xml:space="preserve">
+    <value>Mostra al passaggio del mouse</value>
+  </data>
+  <data name="Hide" xml:space="preserve">
+    <value>Nascondi</value>
+  </data>
 </root>
