--- a/Echo/Resources/LangResx.ko-KR.resx
+++ b/Echo/Resources/LangResx.ko-KR.resx
@@ -312,4 +312,13 @@
   <data name="Embedded_Subtitles" xml:space="preserve">
     <value>자막 삽입</value>
   </data>
+  <data name="Always_Show" xml:space="preserve">
+    <value>항상 표시하기</value>
+  </data>
+  <data name="Show_on_Mouse_Hover" xml:space="preserve">
+    <value>마우스 오버 시 표시</value>
+  </data>
+  <data name="Hide" xml:space="preserve">
+    <value>숨기다</value>
+  </data>
 </root>
