--- a/Echo/Resources/LangResx.zh-Hant.resx
+++ b/Echo/Resources/LangResx.zh-Hant.resx
@@ -312,4 +312,13 @@
   <data name="Embedded_Subtitles" xml:space="preserve">
     <value>内置字幕</value>
   </data>
+  <data name="Always_Show" xml:space="preserve">
+    <value>始終顯示</value>
+  </data>
+  <data name="Show_on_Mouse_Hover" xml:space="preserve">
+    <value>滑鼠懸停顯示</value>
+  </data>
+  <data name="Hide" xml:space="preserve">
+    <value>隱藏</value>
+  </data>
 </root>
