--- a/Echo/Resources/LangResx.pt.resx
+++ b/Echo/Resources/LangResx.pt.resx
@@ -282,9 +282,6 @@
   <data name="Feedback" xml:space="preserve">
     <value>Feedback</value>
   </data>
-  <data name="Check_for_Updates" xml:space="preserve">
-    <value>Sobre</value>
-  </data>
   <data name="About" xml:space="preserve">
     <value>Sobre</value>
   </data>
@@ -320,5 +317,17 @@
   </data>
   <data name="Hide" xml:space="preserve">
     <value>Esconder</value>
+  </data>
+  <data name="Set_up_API" xml:space="preserve">
+    <value>Configurar API</value>
+  </data>
+  <data name="Check_for_Updates" xml:space="preserve">
+    <value>Verificar Atualizações</value>
+  </data>
+  <data name="Sentences" xml:space="preserve">
+    <value>Frases</value>
+  </data>
+  <data name="Words" xml:space="preserve">
+    <value>Palavras</value>
   </data>
 </root>
