--- a/Echo/Resources/LangResx.zh-Hant.resx
+++ b/Echo/Resources/LangResx.zh-Hant.resx
@@ -282,9 +282,6 @@
   <data name="Feedback" xml:space="preserve">
     <value>使用者回饋</value>
   </data>
-  <data name="Check_for_Updates" xml:space="preserve">
-    <value>檢查更新</value>
-  </data>
   <data name="About" xml:space="preserve">
     <value>關於</value>
   </data>
@@ -320,5 +317,17 @@
   </data>
   <data name="Hide" xml:space="preserve">
     <value>隱藏</value>
+  </data>
+  <data name="Set_up_API" xml:space="preserve">
+    <value>設置 API</value>
+  </data>
+  <data name="Check_for_Updates" xml:space="preserve">
+    <value>檢查更新</value>
+  </data>
+  <data name="Sentences" xml:space="preserve">
+    <value>句子</value>
+  </data>
+  <data name="Words" xml:space="preserve">
+    <value>字詞</value>
   </data>
 </root>
