--- a/Echo/Resources/LangResx.uk-UA.resx
+++ b/Echo/Resources/LangResx.uk-UA.resx
@@ -330,4 +330,7 @@
   <data name="Words" xml:space="preserve">
     <value>Слова</value>
   </data>
+  <data name="All_Collections" xml:space="preserve">
+    <value>Усі колекції</value>
+  </data>
 </root>
