--- a/Echo/Resources/LangResx.it-IT.resx
+++ b/Echo/Resources/LangResx.it-IT.resx
@@ -330,4 +330,7 @@
   <data name="Words" xml:space="preserve">
     <value>Parole</value>
   </data>
+  <data name="All_Collections" xml:space="preserve">
+    <value>Tutte le Collezioni</value>
+  </data>
 </root>
