--- a/Echo/Resources/LangResx.ko-KR.resx
+++ b/Echo/Resources/LangResx.ko-KR.resx
@@ -330,4 +330,7 @@
   <data name="Words" xml:space="preserve">
     <value>단어들</value>
   </data>
+  <data name="All_Collections" xml:space="preserve">
+    <value>모든 컬렉션</value>
+  </data>
 </root>
