--- a/Echo/Resources/LangResx.ja-JP.resx
+++ b/Echo/Resources/LangResx.ja-JP.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>すべてのコレクション</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>接続に失敗しました</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>更新に失敗しました</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>新しいバージョンが見つかりました</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>現在のバージョン</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>インストール済みバージョン</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>変更履歴</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>今すぐ更新しますか？</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>ダウンロードが完了しました、再起動しています...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>更新エラー</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>更新中にエラーが発生しました</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>すでに最新バージョンです</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>更新が完了しました</value>
+  </data>
 </root>
