--- a/Echo/Resources/LangResx.ar.resx
+++ b/Echo/Resources/LangResx.ar.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>جميع المجموعات</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>ar: فشل في الاتصال</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>ar: فشل في التحديث</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>ar: تم العثور على إصدار جديد</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>ar: النسخة الحالية</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>ar: النسخة المثبتة</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>ar: سجل التغييرات</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>ar: هل تريد التحديث الآن؟</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>ar: تم الانتهاء من التنزيل، جاري إعادة التشغيل...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>خطأ أثناء التحديث</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>حدث خطأ أثناء التحديث</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>أنت بالفعل على أحدث إصدار</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>تم الانتهاء من التحديث</value>
+  </data>
 </root>
