--- a/Echo/Resources/LangResx.de-DE.resx
+++ b/Echo/Resources/LangResx.de-DE.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>Alle Sammlungen</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>Verbindung fehlgeschlagen</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>Aktualisierung fehlgeschlagen</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>Neue Version gefunden</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>Aktuelle Version</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>Installierte Version</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>Änderungsprotokoll</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>Jetzt aktualisieren?</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>Download abgeschlossen, wird neu gestartet...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>Fehler beim Aktualisieren</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>Fehler während der Aktualisierung</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>Sie sind bereits auf der neuesten Version.</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>Aktualisierung abgeschlossen</value>
+  </data>
 </root>
