--- a/Echo/Resources/LangResx.fr.resx
+++ b/Echo/Resources/LangResx.fr.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>Toutes les collections</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>Échec de la connexion</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>Échec de la mise à jour</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>Nouvelle version trouvée</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>Version actuelle</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>Version installée</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>Journal des modifications</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>Mettre à jour maintenant ?</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>Téléchargement terminé, redémarrage en cours...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>Erreur lors de la mise à jour</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>Erreur lors de la mise à jour</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>Vous êtes déjà sur la dernière version.</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>Mise à jour terminée</value>
+  </data>
 </root>
