--- a/Echo/Resources/LangResx.it-IT.resx
+++ b/Echo/Resources/LangResx.it-IT.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>Tutte le Collezioni</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>Impossibile connettersi</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>Aggiornamento non riuscito</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>Nuova versione trovata</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>Versione attuale</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>Versione installata</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>Registro delle modifiche</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>Aggiornare ora?</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>Download completato, riavviando...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>Errore durante l'aggiornamento</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>Errore durante l'aggiornamento</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>Sei già sulla versione più recente</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>Aggiornamento completato</value>
+  </data>
 </root>
