--- a/Echo/Resources/LangResx.ko-KR.resx
+++ b/Echo/Resources/LangResx.ko-KR.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>모든 컬렉션</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>연결에 실패했습니다</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>업데이트 실패</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>새 버전이 발견되었습니다</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>현재 버전</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>설치된 버전</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>변경 로그</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>지금 업데이트하시겠습니까?</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>다운로드 완료, 재시작 중...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>업데이트 오류</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>업데이트 중 오류 발생</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>이미 최신 버전입니다.</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>업데이트 완료</value>
+  </data>
 </root>
