--- a/Echo/Resources/LangResx.resx
+++ b/Echo/Resources/LangResx.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>All Collections</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>Failed to connect</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>Failed to update</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>New version found</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>Current version</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>Installed version</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>Change log</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>Update now?</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>Download completed, restarting ...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>Error updating</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>Error during updating</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>You are already on the latest version</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>Update completed</value>
+  </data>
 </root>
