--- a/Echo/Resources/LangResx.zh-Hant.resx
+++ b/Echo/Resources/LangResx.zh-Hant.resx
@@ -333,4 +333,40 @@
   <data name="All_Collections" xml:space="preserve">
     <value>所有收藏</value>
   </data>
+  <data name="Failed_to_connect" xml:space="preserve">
+    <value>連接失敗</value>
+  </data>
+  <data name="Failed_to_update" xml:space="preserve">
+    <value>更新失敗</value>
+  </data>
+  <data name="New_version_found" xml:space="preserve">
+    <value>發現新版本</value>
+  </data>
+  <data name="Current_version" xml:space="preserve">
+    <value>當前版本</value>
+  </data>
+  <data name="Installed_version" xml:space="preserve">
+    <value>已安裝版本</value>
+  </data>
+  <data name="Change_log" xml:space="preserve">
+    <value>變更紀錄</value>
+  </data>
+  <data name="Update_now" xml:space="preserve">
+    <value>現在更新？</value>
+  </data>
+  <data name="Download _completed" xml:space="preserve">
+    <value>下載完成，正在重新啟動...</value>
+  </data>
+  <data name="Error_updating" xml:space="preserve">
+    <value>更新錯誤</value>
+  </data>
+  <data name="Error_during_updating" xml:space="preserve">
+    <value>更新時出錯</value>
+  </data>
+  <data name="You_are_already_on_the_latest_version" xml:space="preserve">
+    <value>已經是最新版本</value>
+  </data>
+  <data name="Update_completeed" xml:space="preserve">
+    <value>更新完成</value>
+  </data>
 </root>
