--- a/Echo/Resources/LangResx.ja-JP.resx
+++ b/Echo/Resources/LangResx.ja-JP.resx
@@ -369,4 +369,13 @@
   <data name="Update_completeed" xml:space="preserve">
     <value>更新が完了しました</value>
   </data>
+  <data name="use_third_party_API" xml:space="preserve">
+    <value>サードパーティAPIを使用する</value>
+  </data>
+  <data name="use_Echo_API" xml:space="preserve">
+    <value>Echo APIを使用する</value>
+  </data>
+  <data name="Input_API_Key" xml:space="preserve">
+    <value>APIキーを入力してください</value>
+  </data>
 </root>
