--- a/Echo/Resources/LangResx.ar.resx
+++ b/Echo/Resources/LangResx.ar.resx
@@ -369,4 +369,13 @@
   <data name="Update_completeed" xml:space="preserve">
     <value>تم الانتهاء من التحديث</value>
   </data>
+  <data name="use_third_party_API" xml:space="preserve">
+    <value>استخدم واجهة برمجة التطبيقات الخاصة بالطرف الثالث</value>
+  </data>
+  <data name="use_Echo_API" xml:space="preserve">
+    <value>استخدم واجهة برمجة تطبيقات Echo</value>
+  </data>
+  <data name="Input_API_Key" xml:space="preserve">
+    <value>مفتاح واجهة برمجة التطبيقات الإدخال</value>
+  </data>
 </root>
