--- a/Echo/Resources/LangResx.fr.resx
+++ b/Echo/Resources/LangResx.fr.resx
@@ -369,4 +369,13 @@
   <data name="Update_completeed" xml:space="preserve">
     <value>Mise à jour terminée</value>
   </data>
+  <data name="use_third_party_API" xml:space="preserve">
+    <value>Utiliser une API tierce</value>
+  </data>
+  <data name="use_Echo_API" xml:space="preserve">
+    <value>utiliser l'API Echo</value>
+  </data>
+  <data name="Input_API_Key" xml:space="preserve">
+    <value>Saisir la clé API</value>
+  </data>
 </root>
