--- a/Echo/Resources/LangResx.it-IT.resx
+++ b/Echo/Resources/LangResx.it-IT.resx
@@ -369,4 +369,13 @@
   <data name="Update_completeed" xml:space="preserve">
     <value>Aggiornamento completato</value>
   </data>
+  <data name="use_third_party_API" xml:space="preserve">
+    <value>Utilizza API di terze parti</value>
+  </data>
+  <data name="use_Echo_API" xml:space="preserve">
+    <value>utilizza l'API Echo</value>
+  </data>
+  <data name="Input_API_Key" xml:space="preserve">
+    <value>Inserisci la chiave API</value>
+  </data>
 </root>
