--- a/Echo/Resources/LangResx.ko-KR.resx
+++ b/Echo/Resources/LangResx.ko-KR.resx
@@ -369,4 +369,13 @@
   <data name="Update_completeed" xml:space="preserve">
     <value>업데이트 완료</value>
   </data>
+  <data name="use_third_party_API" xml:space="preserve">
+    <value>타사 API 사용</value>
+  </data>
+  <data name="use_Echo_API" xml:space="preserve">
+    <value>Echo API 사용하기</value>
+  </data>
+  <data name="Input_API_Key" xml:space="preserve">
+    <value>API 키 입력</value>
+  </data>
 </root>
