--- a/Echo/Resources/LangResx.pt.resx
+++ b/Echo/Resources/LangResx.pt.resx
@@ -382,6 +382,6 @@
     <value>Confirm</value>
   </data>
   <data name="Cancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Cancelar</value>
   </data>
 </root>
