--- a/Echo/Resources/LangResx.ar.resx
+++ b/Echo/Resources/LangResx.ar.resx
@@ -378,4 +378,10 @@
   <data name="Input_API_Key" xml:space="preserve">
     <value>مفتاح واجهة برمجة التطبيقات الإدخال</value>
   </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>تأكيد</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>إلغاء</value>
+  </data>
 </root>
