--- a/Echo/Resources/LangResx.de-DE.resx
+++ b/Echo/Resources/LangResx.de-DE.resx
@@ -378,4 +378,10 @@
   <data name="Input_API_Key" xml:space="preserve">
     <value>API-Schlüssel eingeben</value>
   </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Bestätigen</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Abbrechen</value>
+  </data>
 </root>
