--- a/Echo/Resources/LangResx.fr.resx
+++ b/Echo/Resources/LangResx.fr.resx
@@ -378,4 +378,10 @@
   <data name="Input_API_Key" xml:space="preserve">
     <value>Saisir la clé API</value>
   </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Confirmer</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Annuler</value>
+  </data>
 </root>
