--- a/Echo/Resources/LangResx.uk-UA.resx
+++ b/Echo/Resources/LangResx.uk-UA.resx
@@ -378,4 +378,10 @@
   <data name="Input_API_Key" xml:space="preserve">
     <value>Введіть API ключ</value>
   </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Підтвердити</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Скасувати</value>
+  </data>
 </root>
