--- a/Echo/Resources/LangResx.zh-Hant.resx
+++ b/Echo/Resources/LangResx.zh-Hant.resx
@@ -378,4 +378,10 @@
   <data name="Input_API_Key" xml:space="preserve">
     <value>輸入 API 金鑰</value>
   </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>確認</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>取消</value>
+  </data>
 </root>
